# IDGserver

./: CMakeLists.txt  blob.hpp  clienttask.cpp  clienttask.hpp  main.cpp  server.cpp  server.hpp  tree.hpp
